[package]

name = "rust_cql"
version = "0.0.3"
authors = ["Erik Duindam <erik@nuntio.tv>, Ignacio Martín <natx.mc@gmail.com>"]

[dependencies.uuid]

git = "https://github.com/rust-lang/uuid.git"

[dependencies.num]

git = "https://github.com/rust-lang/num"

[dependencies]
byteorder = "*"

[dependencies]
enum_primitive = "*"
